# zfp

./: .gitignore  CMakeLists.txt  Config  zfp-config.cmake.in
include/: bitstream.h  cudaerror_macro.h  hiperror_macro.h  streamstruct.h  zfp.h
src/: CMakeLists.txt  zfp.c
src/cuda_zfp/: ErrorCheck.h  cuZFP.cu  cuZFP.h  decode.cuh  decode1.cuh  decode2.cuh  decode3.cuh  encode3.cuh  shared.h
src/hip_zfp/: decode1.h  decode2.h  decode3.h  encode1.h  encode2.h  encode3.h  hipZFP.cpp
src/inline/: bitstream.c
src/share/: omp.c  parallel.c
src/template/: compress.c  decompress.c  ompcompress.c  ompdecompress.c
tests/: CMakeLists.txt  CMakeLists.txt.in  Makefile
utils/: CMakeLists.txt  zfp.c
